- refactor api to be v1 - deploy to fly
