# app/serializers/user_serializer.rb
@@ -1,5 +1,5 @@
 class UserSerializer < ActiveModel::Serializer
-  attributes :id, :username, :email, :role
+  attributes :id, :username, :email, :role, :password, :password_confirmation
 
   has_many :bookings
   has_many :hotels
