# config/routes.rb
@@ -1,28 +1,23 @@
 Rails.application.routes.draw do
-  mount Rswag::Ui::Engine => '/api-docs'
+  mount Rswag::Ui::Engine => '/'
   mount Rswag::Api::Engine => '/api-docs'
 
-  devise_for :users
+  # devise_for :users
 
   namespace :api do
-    namespace :v0 do
+    namespace :v1 do
+      resources :rooms do
+        resources :bookings
+      end
       resources :users do
         resources :hotels
         resources :bookings
       end
-    end
-    namespace :v3 do
-      resources :bookings
-    end
-    namespace :v2 do
-      resources :rooms do
-        resources :bookings
-      end
-    end
-    namespace :v1 do
       resources :hotels do
         resources :rooms
       end
+      resources :bookings
+      resources :sessions, only: %i[create destroy]
     end
   end
 end
